Fix package exports and module resolution in @tenedev/marquee
- Updated `exports` field to correctly resolve ES Module and CommonJS versions.
- Corrected paths in `main`, `module`, and `exports` for proper package resolution.
- Ensured `dist/` directory is properly included in the package.

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "module": "./dist/@tenedev/marquee.js",
   "exports": {
     ".": {
-      "import": "./dist/@tenedev/marquee-npm.js",
+      "import": "./dist/@tenedev/marquee.js",
       "require": "./dist/@tenedev/marquee.umd.cjs"
     }
   },
