--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@tenedev/marquee",
   "private": false,
-  "version": "0.0.0",
+  "version": "0.0.1",
   "type": "module",
   "files": [
     "dist",
@@ -11,7 +11,7 @@
   "module": "./dist/@tenedev/marquee.js",
   "exports": {
     ".": {
-      "import": "./dist/@tenedev/marquee-npm.js",
+      "import": "./dist/@tenedev/marquee.js",
       "require": "./dist/@tenedev/marquee.umd.cjs"
     }
   },
